--- a/style.css
+++ b/style.css
@@ -10,9 +10,7 @@
     width: 100%;
     height: 603px;
     /* background-image: linear-gradient(rgba(255,255,255,0.5)),url(image/banner.png); */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(image/banner.png);
-
-
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(34, 33, 33, 0.5)), url(image/CampusImage.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -24,7 +22,7 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    padding: 10px 40px;
+    padding: 0px 40px;
     align-items: center;
 }
 
@@ -40,7 +38,7 @@
 }
 
 .logo img {
-    height: 50px;
+    height: 120px;
 }
 
 .nav-link a:hover {
@@ -55,7 +53,7 @@
 .nav-text {
     text-align: center;
     position: absolute;
-    top: 35%;
+    top: 25%;
     left: 22%;
 }
 
@@ -80,8 +78,104 @@
 }
 
 
-.nav-btn a :hover  ::view-transition {
+.nav-btn a :hover ::view-transition {
     border: 1px solid red;
     background-color: red;
     transition: 1s;
 }
+
+/* main part  */
+
+/* courses */
+
+.course {
+    position: relative;
+    top: 80px;
+    text-align: center;
+    height: 200px;
+}
+
+.course p {
+    margin-top: 10px;
+    color: gray;
+}
+
+
+.courses-name {
+    display: flex;
+    /* margin-left: 50px; */
+    position: relative;
+    top: 5px;
+    text-align: center;
+}
+
+.courses-name-1 {
+    border: 1px solid rgb(126, 122, 122);
+    background-color: rgb(169, 137, 143);
+    border-radius: 5px;
+    padding: 10px 50px;
+    margin: 10px 35px;
+    box-shadow: 5px 10px 8px #888888;
+}
+
+.courses-name-1 p {
+    margin-top: 10px;
+    color: whitesmoke;
+}
+
+.courses-name-2 {
+    border: 1px solid rgb(126, 122, 122);
+    background-color: rgb(169, 137, 143);
+    border-radius: 5px;
+    padding: 10px 50px;
+    margin: 10px 35px;
+    box-shadow: 5px 10px 8px #888888;
+}
+
+.courses-name-2 p {
+    margin-top: 10px;
+    color: whitesmoke;
+}
+
+.courses-name-3 {
+    border: 1px solid rgb(126, 122, 122);
+    background-color: rgb(169, 137, 143);
+    border-radius: 5px;
+    padding: 10px 50px;
+    margin: 10px 35px;
+    box-shadow: 5px 10px 8px #888888;
+}
+
+.courses-name-3 p {
+    margin-top: 10px;
+    color: whitesmoke;
+}
+
+/* campus */
+
+.campus-hader {
+    position: relative;
+    top: 80px;
+    text-align: center;
+    height: 200px;
+}
+
+.campus-hader p {
+    margin-top: 10px;
+    color: gray;
+}
+
+/*campus img */
+.campus-img {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.campus-img img {
+    width: 100%;
+    height: 420px;
+    margin-bottom: 10px;
+ border-radius: 10px;
+
+}
+
