--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
 .header {
     width: 100%;
     height: 603px;
-    /* background-image: linear-gradient(rgba(255,255,255,0.5)),url(image/banner.png); */
+
+    /* background-image: linear-gradient(rgba(186, 32, 32, 0.5)); */
+    /* background-image: linear-gradient(rgba(191, 39, 39, 0.135)); */
+
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(34, 33, 33, 0.5)), url(image/CampusImage.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -51,10 +54,9 @@
 /* navbar text container */
 
 .nav-text {
-    text-align: center;
-    position: absolute;
-    top: 25%;
-    left: 22%;
+   text-align: center;
+    padding-top: 100px;
+    margin: auto;
 }
 
 .nav-text h1 {
@@ -78,10 +80,11 @@
 }
 
 
-.nav-btn a :hover ::view-transition {
-    border: 1px solid red;
-    background-color: red;
-    transition: 1s;
+.nav-btn a:hover {
+    border: 1px solid rgb(239, 127, 127);
+    background-color: rgb(226, 158, 158);
+    border-radius: 10px;
+    transition: 2s;
 }
 
 /* main part  */
@@ -89,10 +92,10 @@
 /* courses */
 
 .course {
-    position: relative;
-    top: 80px;
     text-align: center;
-    height: 200px;
+    padding-top: 100px;
+    margin: auto;
+    width: 88%;
 }
 
 .course p {
@@ -154,10 +157,11 @@
 /* campus */
 
 .campus-hader {
-    position: relative;
-    top: 80px;
     text-align: center;
-    height: 200px;
+    padding-top: 100px;
+    margin: auto;
+    padding: 50px;
+
 }
 
 .campus-hader p {
@@ -175,7 +179,20 @@
     width: 100%;
     height: 420px;
     margin-bottom: 10px;
- border-radius: 10px;
+    border-radius: 10px;
 
 }
 
+/* Facitilitecs */
+
+.Facilitics {
+    text-align: center;
+    padding-top: 100px;
+    margin: auto;
+    width: 88%;
+}
+
+.Facilitics p {
+    margin-top: 10px;
+    color: gray;
+}
